k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntmail
  namespace: huntmail
  labels:
    app: huntmail
spec:
  type: ClusterIP
  selector:
    app: huntmail
  ports:
    - name: http
      port: 8080
      targetPort: http
